gccida/g3/reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1323:4: error: expected ';' after expression
rtx i; // [rsp+0h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1323:5: error: use of undeclared identifier 'i'
rtx i; // [rsp+0h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1332:4: error: expected ';' after expression
rtx rega; // [rsp+38h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1332:5: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rtx rega; // [rsp+38h] [rbp-40h] 
    ^~~~
    reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1354:1: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rega = reg; 
^~~~
reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1357:12: error: expected ';' after expression
v2 = ( rtx)insn[2]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1362:12: error: expected ';' after expression
v2 = ( rtx)v2[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1374:7: error: use of undeclared identifier 'i'
for ( i = v2; ; rtwint = ( _DWORD *)i->fld[0].rtwint ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1374:37: error: use of undeclared identifier 'i'
for ( i = v2; ; rtwint = ( _DWORD *)i->fld[0].rtwint ) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1403:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v21.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1426:27: error: expected expression
&& ( rtx_equal_p( *( rtx *)( v31 + 8), rega) || *( _WORD *)v32 != 66 && reg_overlap_mentioned_p( rega, v32)) ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1426:40: error: use of undeclared identifier 'rega'; did you mean 'reg'?
&& ( rtx_equal_p( *( rtx *)( v31 + 8), rega) || *( _WORD *)v32 != 66 && reg_overlap_mentioned_p( rega, v32)) ) 
                                       ^~~~
                                       reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1426:98: error: use of undeclared identifier 'rega'; did you mean 'reg'?
&& ( rtx_equal_p( *( rtx *)( v31 + 8), rega) || *( _WORD *)v32 != 66 && reg_overlap_mentioned_p( rega, v32)) ) 
                                                                                                 ^~~~
                                                                                                 reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1440:24: error: use of undeclared identifier 'rega'; did you mean 'reg'?
if ( rtx_equal_p( rtx, rega) || *( _WORD *)rtx != 66 && reg_overlap_mentioned_p( rega, rtx) ) 
                       ^~~~
                       reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1440:82: error: use of undeclared identifier 'rega'; did you mean 'reg'?
if ( rtx_equal_p( rtx, rega) || *( _WORD *)rtx != 66 && reg_overlap_mentioned_p( rega, rtx) ) 
                                                                                 ^~~~
                                                                                 reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1490:27: error: expected expression
&& ( rtx_equal_p( *( rtx *)( v42 + 8), rega) || *( _WORD *)v43 != 66 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1490:40: error: use of undeclared identifier 'rega'; did you mean 'reg'?
&& ( rtx_equal_p( *( rtx *)( v42 + 8), rega) || *( _WORD *)v43 != 66 
                                       ^~~~
                                       reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1491:29: error: use of undeclared identifier 'rega'; did you mean 'reg'?
&& reg_overlap_mentioned_p( rega, v43)) ) 
                            ^~~~
                            reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1505:24: error: use of undeclared identifier 'rega'; did you mean 'reg'?
if ( rtx_equal_p( v26, rega) || *( _WORD *)v26 != 66 && reg_overlap_mentioned_p( rega, v26) ) 
                       ^~~~
                       reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/rtlanal.c:1252:21: note: 'reg' declared here
int  reg_set_p( rtx reg, rtx insn) 
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_set_p/src/obj/rtlanal.o] Error 1
